--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@next/third-parties": "^15.3.1",
     "@vercel/analytics": "^1.5.0",
     "algoliasearch": "^5.23.4",
     "lucide-react": "^0.503.0",
